--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,28 +1,44 @@
-name: End-to-end tests
-on: 
+# name: End-to-end tests
+# on: 
+#   push:
+#     branches: [main]
+# jobs:
+#   cypress-run:
+#     runs-on: ubuntu-22.04
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         containers: [1, 2, 3, 4, 5]
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+#       - name: Cypress run
+#         uses: cypress-io/github-action@v6
+#         with:
+#           parallel: true
+#         env:
+#           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+
+#       # - uses: actions/upload-artifact@v4
+#       #   if: failure()
+#       #   with:
+#       #     name: cypress-screenshots
+#       #     path: cypress/screenshots
+#       # - uses: actions/upload-artifact@v4
+#       #   with:
+#       #     name: cypress-videos
+#       #     path: cypress/videos
+          
+name: Test Secret Access
+
+on:
   push:
     branches: [main]
+
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
-    strategy:
-      fail-fast: false
-      matrix:
-        containers: [1, 2, 3, 4, 5]
+  test-secret:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Cypress run
-        uses: cypress-io/github-action@v6
-        with:
-          parallel: true
-      - uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-      - uses: actions/upload-artifact@v4
-        with:
-          name: cypress-videos
-          path: cypress/videos
-          
+      - uses: actions/checkout@v3
+      - name: Test Secret
+        run: echo "${{ secrets.CYPRESS_RECORD_KEY }}"
